src/App.css
* {
  font-family: 'Kumar One', cursive;
  font-style: italic;
}
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
}

span {
  padding: 15px;
  font-style: normal;
  font-family: 'Rajdhani', sans-serif;
  font-weight: 600;
  font-size: 110%;
  color: whitesmoke;
  background-color: rgba(137, 73, 37, 0.7);
  border-radius: 30px;
  box-shadow: 3px 2px 1px rgba(68, 36, 17, 0.7);
  margin: 5px;
}

